--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -53,6 +53,12 @@
 					"id": -1,
 					"name": "活动页",
 					"pathName": "pages/index/activity/activity",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "详情页",
+					"pathName": "pages/shop/goods/goods",
 					"query": ""
 				}
 			]
