增加订单页面

--- a/weapp-1/app.json
+++ b/weapp-1/app.json
@@ -5,6 +5,7 @@
     "pages/index/result/result",
     "pages/index/activity/activity",
     "pages/shop/goods/goods",
+    "pages/shop/order/order",
     "pages/classify/index",
     "pages/cart/index",
     "pages/my/index",
