增加支付页面

--- a/weapp-1/app.json
+++ b/weapp-1/app.json
@@ -6,6 +6,7 @@
     "pages/index/activity/activity",
     "pages/shop/goods/goods",
     "pages/shop/order/order",
+    "pages/shop/pay/pay",
     "pages/classify/index",
     "pages/cart/index",
     "pages/my/index",
