--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 5,
+			"current": 6,
 			"list": [
 				{
 					"id": -1,
@@ -64,7 +64,13 @@
 				{
 					"id": -1,
 					"name": "订单页",
-					"pathName": "pages/shop/order/order"
+					"pathName": "pages/shop/order/order",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "支付界面",
+					"pathName": "pages/shop/pay/pay"
 				}
 			]
 		}
