支付界面完成(分期界面未完成)

--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -70,7 +70,8 @@
 				{
 					"id": -1,
 					"name": "支付界面",
-					"pathName": "pages/shop/pay/pay"
+					"pathName": "pages/shop/pay/pay",
+					"query": ""
 				}
 			]
 		}
