--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 8,
 			"list": [
 				{
 					"id": -1,
@@ -76,7 +76,14 @@
 				{
 					"id": -1,
 					"name": "购物车",
-					"pathName": "pages/cart/index"
+					"pathName": "pages/cart/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "个人信息",
+					"pathName": "pages/my/info/info",
+					"query": ""
 				}
 			]
 		}
