--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 8,
+			"current": 9,
 			"list": [
 				{
 					"id": -1,
@@ -83,6 +83,12 @@
 					"id": -1,
 					"name": "个人信息",
 					"pathName": "pages/my/info/info",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "钱包",
+					"pathName": "pages/my/wallet/wallet",
 					"query": ""
 				}
 			]
