--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 9,
+			"current": 10,
 			"list": [
 				{
 					"id": -1,
@@ -90,6 +90,11 @@
 					"name": "钱包",
 					"pathName": "pages/my/wallet/wallet",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "充值",
+					"pathName": "pages/my/wallet/Recharge/Recharge"
 				}
 			]
 		}
