我的优惠券完成

--- a/weapp-1/app.json
+++ b/weapp-1/app.json
@@ -17,6 +17,7 @@
     "pages/my/wallet/take/addCard",
     "pages/my/wallet/take/takeOk",
     "pages/my/info/name/name",
+    "pages/my/card/card",
     "pages/details/index",
     "pages/brand/index",
     "pages/list/index",
