红包页面增加

--- a/weapp-1/app.json
+++ b/weapp-1/app.json
@@ -18,6 +18,7 @@
     "pages/my/wallet/take/takeOk",
     "pages/my/info/name/name",
     "pages/my/card/card",
+    "pages/my/hongb/hongb",
     "pages/details/index",
     "pages/brand/index",
     "pages/list/index",
