--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 12,
+			"current": 13,
 			"list": [
 				{
 					"id": -1,
@@ -107,6 +107,12 @@
 					"id": -1,
 					"name": "卡券",
 					"pathName": "pages/my/card/card",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "红包",
+					"pathName": "pages/my/hongb/hongb",
 					"query": ""
 				}
 			]
