--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 13,
+			"current": 14,
 			"list": [
 				{
 					"id": -1,
@@ -114,6 +114,11 @@
 					"name": "红包",
 					"pathName": "pages/my/hongb/hongb",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "订单",
+					"pathName": "pages/my/indent/indent"
 				}
 			]
 		}
