--- a/weapp-1/app.json
+++ b/weapp-1/app.json
@@ -5,6 +5,7 @@
     "pages/index/result/result",
     "pages/index/activity/activity",
     "pages/shop/goods/goods",
+    "pages/shop/order/orderList",
     "pages/shop/order/order",
     "pages/shop/pay/pay",
     "pages/classify/index",
