--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 14,
+			"current": 15,
 			"list": [
 				{
 					"id": -1,
@@ -62,9 +62,9 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 5,
 					"name": "订单页",
-					"pathName": "pages/shop/order/order",
+					"pathName": "pages/shop/order/orderList",
 					"query": ""
 				},
 				{
@@ -118,7 +118,14 @@
 				{
 					"id": -1,
 					"name": "订单",
-					"pathName": "pages/my/indent/indent"
+					"pathName": "pages/my/indent/indent",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "待支付订单",
+					"pathName": "pages/shop/order/order",
+					"query": ""
 				}
 			]
 		}
