快递信息页

--- a/weapp-1/app.json
+++ b/weapp-1/app.json
@@ -7,6 +7,7 @@
     "pages/shop/goods/goods",
     "pages/shop/order/orderList",
     "pages/shop/order/order",
+    "pages/shop/order/express/express",
     "pages/shop/pay/pay",
     "pages/classify/index",
     "pages/cart/index",
