--- a/weapp-1/project.config.json
+++ b/weapp-1/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 15,
+			"current": 16,
 			"list": [
 				{
 					"id": -1,
@@ -126,6 +126,11 @@
 					"name": "待支付订单",
 					"pathName": "pages/shop/order/order",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "快递信息",
+					"pathName": "pages/shop/order/express/express"
 				}
 			]
 		}
