--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
 	"appid": "wx942a74c19e682464",
-	"projectname": "weapp-1",
+	"projectname": "%E5%A5%A2%E7%89%A9%E5%B0%8F%E7%A8%8B%E5%BA%8F",
 	"condition": {
 		"search": {
 			"current": -1,
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 23,
 			"list": [
 				{
 					"id": -1,
@@ -168,6 +168,11 @@
 					"name": "退款详情",
 					"pathName": "pages/shop/order/info/info",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "登录",
+					"pathName": "pages/user/index"
 				}
 			]
 		}
