--- a/project.config.json
+++ b/project.config.json
@@ -172,7 +172,8 @@
 				{
 					"id": -1,
 					"name": "登录",
-					"pathName": "pages/user/index"
+					"pathName": "pages/user/index",
+					"query": ""
 				}
 			]
 		}
