--- a/app.json
+++ b/app.json
@@ -40,7 +40,7 @@
     "navigationBarTitleText": "奢物",
     "navigationBarBackgroundColor": "#38373D",
     "backgroundColor": "#F2f2f2",
-    "enablePullDownRefresh": true
+    "enablePullDownRefresh": false
   },
   "tabBar": {
     "color": "#999999",
