--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
     "pages/my/wallet/take/takeOk",
     "pages/my/info/name/name",
     "pages/my/card/card",
+    "pages/my/getcard/getcard",
     "pages/my/indent/indent",
     "pages/my/hongb/hongb",
     "pages/details/index",
