--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 13,
+			"current": 24,
 			"list": [
 				{
 					"id": -1,
@@ -174,6 +174,11 @@
 					"name": "登录",
 					"pathName": "pages/user/index",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "領取",
+					"pathName": "pages/my/getcard/getcard"
 				}
 			]
 		}
