--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 24,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -178,7 +178,8 @@
 				{
 					"id": -1,
 					"name": "領取",
-					"pathName": "pages/my/getcard/getcard"
+					"pathName": "pages/my/getcard/getcard",
+					"query": ""
 				}
 			]
 		}
