--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 25,
 			"list": [
 				{
 					"id": -1,
@@ -180,6 +180,12 @@
 					"name": "領取",
 					"pathName": "pages/my/getcard/getcard",
 					"query": ""
+				},
+				{
+					"id": 25,
+					"name": "商品列表页",
+					"pathName": "pages/index/result/result",
+					"query": "brand_id=1"
 				}
 			]
 		}
