--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -56,10 +56,10 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 4,
 					"name": "详情页",
 					"pathName": "pages/shop/goods/goods",
-					"query": ""
+					"query": "id=1"
 				},
 				{
 					"id": 5,
