加入购物车

--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
     "pages/shop/site/add",
     "pages/classify/index",
     "pages/cart/index",
+    "pages/cart2/index",
     "pages/my/index",
     "pages/my/lxkf/lxkf",
     "pages/my/info/info",
