--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 7,
 			"list": [
 				{
 					"id": -1,
@@ -74,9 +74,9 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 7,
 					"name": "购物车",
-					"pathName": "pages/cart/index",
+					"pathName": "pages/cart2/index",
 					"query": ""
 				},
 				{
