--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 7,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -47,7 +47,7 @@
 					"id": 2,
 					"name": "搜索页",
 					"pathName": "pages/index/result/result",
-					"query": "brand_id=1"
+					"query": ""
 				},
 				{
 					"id": -1,
