购物车系列

--- a/app.json
+++ b/app.json
@@ -27,9 +27,11 @@
     "pages/my/wallet/take/takeOk",
     "pages/my/info/name/name",
     "pages/my/card/card",
+    "pages/my/card/is_card",
     "pages/my/getcard/getcard",
     "pages/my/indent/indent",
     "pages/my/hongb/hongb",
+    "pages/my/hongb/is_hongb",
     "pages/details/index",
     "pages/brand/index",
     "pages/list/index",
