--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -59,7 +59,7 @@
 					"id": 4,
 					"name": "详情页",
 					"pathName": "pages/shop/goods/goods",
-					"query": "id=3"
+					"query": "id=1"
 				},
 				{
 					"id": 5,
@@ -210,6 +210,12 @@
 					"name": "导航页",
 					"pathName": "pages/index/nav",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "富文本解析",
+					"pathName": "pages/index/wxParse/index",
+					"query": "api=Common/jmhs"
 				}
 			]
 		}
