--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 15,
+			"current": 16,
 			"list": [
 				{
 					"id": -1,
@@ -128,10 +128,10 @@
 					"query": "id=1602"
 				},
 				{
-					"id": -1,
+					"id": 16,
 					"name": "快递信息",
 					"pathName": "pages/shop/order/express/express",
-					"query": ""
+					"query": "order_id=1853"
 				},
 				{
 					"id": -1,
@@ -197,7 +197,7 @@
 					"id": 27,
 					"name": "订单列表",
 					"pathName": "pages/my/indent/indent",
-					"query": "status=10"
+					"query": "status=-1"
 				},
 				{
 					"id": -1,
