--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 16,
+			"current": 4,
 			"list": [
 				{
 					"id": -1,
@@ -216,6 +216,12 @@
 					"name": "富文本解析",
 					"pathName": "pages/index/wxParse/index",
 					"query": "api=Common/jmhs"
+				},
+				{
+					"id": -1,
+					"name": "支付完成",
+					"pathName": "pages/shop/pay/index",
+					"query": ""
 				}
 			]
 		}
