feat: 设置支付密码页面

--- a/app.json
+++ b/app.json
@@ -23,6 +23,9 @@
     "pages/cart2/index",
     "pages/my/index",
     "pages/my/lxkf/lxkf",
+    "pages/my/set/set",
+    "pages/my/set/password",
+    "pages/my/set/setPsw",
     "pages/my/info/info",
     "pages/my/wallet/wallet",
     "pages/my/wallet/Recharge/Recharge",
