--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 15,
+			"current": 34,
 			"list": [
 				{
 					"id": -1,
@@ -221,6 +221,24 @@
 					"id": -1,
 					"name": "支付完成",
 					"pathName": "pages/shop/pay/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "设置页面",
+					"pathName": "pages/my/set/set",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "password",
+					"pathName": "pages/my/set/password",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "设置密码",
+					"pathName": "pages/my/set/setPsw",
 					"query": ""
 				}
 			]
