--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 34,
+			"current": 35,
 			"list": [
 				{
 					"id": -1,
@@ -125,7 +125,7 @@
 					"id": 15,
 					"name": "订单详情",
 					"pathName": "pages/shop/order/order",
-					"query": "id=1853"
+					"query": "id=1885"
 				},
 				{
 					"id": 16,
@@ -197,7 +197,7 @@
 					"id": 27,
 					"name": "订单列表",
 					"pathName": "pages/my/indent/indent",
-					"query": "status=-1"
+					"query": "status=10"
 				},
 				{
 					"id": -1,
@@ -239,6 +239,12 @@
 					"id": -1,
 					"name": "设置密码",
 					"pathName": "pages/my/set/setPsw",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "退款申请",
+					"pathName": "pages/shop/order/refund",
 					"query": ""
 				}
 			]
