--- a/app.json
+++ b/app.json
@@ -51,7 +51,8 @@
     "navigationBarTitleText": "奢物",
     "navigationBarBackgroundColor": "#38373D",
     "backgroundColor": "#F2f2f2",
-    "enablePullDownRefresh": false
+    "enablePullDownRefresh": false,
+    "onReachBottomDistance":0
   },
   "tabBar": {
     "color": "#999999",
