--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -45,9 +45,9 @@
 				},
 				{
 					"id": 2,
-					"name": "搜索结果页",
+					"name": "商品列表",
 					"pathName": "pages/index/result/result",
-					"query": "keywords=测试"
+					"query": ""
 				},
 				{
 					"id": 3,
