--- a/app.json
+++ b/app.json
@@ -62,26 +62,26 @@
     "list": [
       {
         "pagePath": "pages/index/index",
-        "iconPath": "images/tab/home.png",
-        "selectedIconPath": "images/tab/home_active.png",
+        "iconPath": "images/tab/tab_shouye_normal@2x.png",
+        "selectedIconPath": "images/tab/tab_shouye_selected@2x.png",
         "text": "首页"
       },
       {
         "pagePath": "pages/classify/index",
-        "iconPath": "images/tab/fenlei.png",
-        "selectedIconPath": "images/tab/fenlei_active.png",
+        "iconPath": "images/tab/tab_fenlei_normal@2x.png",
+        "selectedIconPath": "images/tab/tab_fenlei_seletced@2x.png",
         "text": "分类"
       },
       {
         "pagePath": "pages/cart/index",
-        "iconPath": "images/tab/gwc.png",
-        "selectedIconPath": "images/tab/gwc_active.png",
+        "iconPath": "images/tab/tab_gouwuche_normal@2x.png",
+        "selectedIconPath": "images/tab/tab_gouwuche_selected@2x.png",
         "text": "购物车"
       },
       {
         "pagePath": "pages/my/index",
-        "iconPath": "images/tab/wode.png",
-        "selectedIconPath": "images/tab/wode_active.png",
+        "iconPath": "images/tab/tab_wode_normal@2x.png",
+        "selectedIconPath": "images/tab/tab_wode_selected@2x.png",
         "text": "我的"
       }
     ]
